// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`finds all errors in example '"1" 2' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 3,
        "kind": "primary",
        "message": "can't evaluate this expression",
        "start": 0,
      },
    ],
    "message": "Cannot apply a number or string as a function",
    "notes": [],
    "type": "EVALUATION_ERROR",
  },
]
`;

exports[`finds all errors in example '"1" 2' 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {
            "position": {
              "end": 3,
              "start": 0,
            },
          },
          "id": "10",
          "type": "implicit_placeholder",
        },
        {
          "children": [],
          "data": {
            "position": {
              "end": 5,
              "start": 4,
            },
            "value": 2,
          },
          "id": "6",
          "type": "number",
        },
      ],
      "data": {
        "operator": "application",
        "position": {
          "end": 5,
          "start": 0,
        },
      },
      "id": "7",
      "type": "operator",
    },
  ],
  "data": {},
  "id": "9",
  "type": "script",
}
`;

exports[`finds all errors in example '(' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 1,
        "kind": "primary",
        "message": "must be closed with ")" by that point",
        "start": 1,
      },
      {
        "end": 1,
        "kind": "primary",
        "message": "opening token "(" here",
        "start": 0,
      },
    ],
    "message": "Missing closing token",
    "notes": [],
    "type": "MISSING_TOKEN",
  },
]
`;

exports[`finds all errors in example '(' 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {
            "position": {
              "end": 1,
              "start": 0,
            },
          },
          "id": "3",
          "type": "implicit_placeholder",
        },
      ],
      "data": {
        "operator": "parens",
        "position": {
          "end": 1,
          "start": 0,
        },
      },
      "id": "4",
      "type": "operator",
    },
  ],
  "data": {},
  "id": "7",
  "type": "script",
}
`;

exports[`finds all errors in example '({ 1 )' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 4,
        "kind": "primary",
        "message": "somewhere here",
        "start": 1,
      },
    ],
    "message": "Missing token, expected one of: "}"",
    "notes": [],
    "type": "MISSING_TOKEN",
  },
]
`;

exports[`finds all errors in example '({ 1 )' 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "data": {
                    "position": {
                      "end": 4,
                      "start": 3,
                    },
                    "value": 1,
                  },
                  "id": "13",
                  "type": "number",
                },
              ],
              "data": {
                "operator": "sequence",
                "position": {
                  "end": 4,
                  "start": 3,
                },
              },
              "id": "15",
              "type": "operator",
            },
          ],
          "data": {
            "operator": "block",
            "position": {
              "end": 4,
              "start": 1,
            },
          },
          "id": "16",
          "type": "operator",
        },
      ],
      "data": {
        "operator": "parens",
        "position": {
          "end": 6,
          "start": 0,
        },
      },
      "id": "18",
      "type": "operator",
    },
  ],
  "data": {},
  "id": "20",
  "type": "script",
}
`;

exports[`finds all errors in example ')' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 1,
        "kind": "primary",
        "message": "unexpected closing token",
        "start": 0,
      },
    ],
    "message": "Unexpected closing token ")"",
    "notes": [],
    "type": "MISSING_TOKEN",
  },
]
`;

exports[`finds all errors in example ')' 2`] = `
{
  "children": [
    {
      "children": [],
      "data": {
        "position": {
          "end": 1,
          "start": 0,
        },
      },
      "id": "3",
      "type": "implicit_placeholder",
    },
  ],
  "data": {},
  "id": "2",
  "type": "script",
}
`;

exports[`finds all errors in example '[' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 1,
        "kind": "primary",
        "message": "somewhere here",
        "start": 0,
      },
    ],
    "message": "Missing token, expected one of: "]"",
    "notes": [],
    "type": "MISSING_TOKEN",
  },
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 0,
        "kind": "primary",
        "message": "here",
        "start": 0,
      },
    ],
    "message": "Unexpected end of source",
    "notes": [],
    "type": "END_OF_SOURCE",
  },
]
`;

exports[`finds all errors in example '[' 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {
            "position": {
              "end": 0,
              "start": 0,
            },
          },
          "id": "6",
          "type": "implicit_placeholder",
        },
      ],
      "data": {
        "operator": "square_brackets",
        "position": {
          "end": 1,
          "start": 0,
        },
      },
      "id": "2",
      "type": "operator",
    },
  ],
  "data": {},
  "id": "5",
  "type": "script",
}
`;

exports[`finds all errors in example ']' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 1,
        "kind": "primary",
        "message": "unexpected closing token",
        "start": 0,
      },
    ],
    "message": "Unexpected closing token "]"",
    "notes": [],
    "type": "MISSING_TOKEN",
  },
]
`;

exports[`finds all errors in example ']' 2`] = `
{
  "children": [
    {
      "children": [],
      "data": {
        "position": {
          "end": 1,
          "start": 0,
        },
      },
      "id": "3",
      "type": "implicit_placeholder",
    },
  ],
  "data": {},
  "id": "2",
  "type": "script",
}
`;

exports[`finds all errors in example '{ (1 }' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 4,
        "kind": "primary",
        "message": "somewhere here",
        "start": 2,
      },
    ],
    "message": "Missing token, expected one of: ")"",
    "notes": [],
    "type": "MISSING_TOKEN",
  },
]
`;

exports[`finds all errors in example '{ (1 }' 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "data": {
                    "position": {
                      "end": 4,
                      "start": 3,
                    },
                    "value": 1,
                  },
                  "id": "13",
                  "type": "number",
                },
              ],
              "data": {
                "operator": "parens",
                "position": {
                  "end": 4,
                  "start": 2,
                },
              },
              "id": "15",
              "type": "operator",
            },
          ],
          "data": {
            "operator": "sequence",
            "position": {
              "end": 4,
              "start": 2,
            },
          },
          "id": "17",
          "type": "operator",
        },
      ],
      "data": {
        "operator": "block",
        "position": {
          "end": 6,
          "start": 0,
        },
      },
      "id": "18",
      "type": "operator",
    },
  ],
  "data": {},
  "id": "20",
  "type": "script",
}
`;

exports[`finds all errors in example '{' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 1,
        "kind": "primary",
        "message": "somewhere here",
        "start": 0,
      },
    ],
    "message": "Missing token, expected one of: "}"",
    "notes": [],
    "type": "MISSING_TOKEN",
  },
]
`;

exports[`finds all errors in example '{' 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {
            "operator": "sequence",
            "position": {
              "end": 0,
              "start": 0,
            },
          },
          "id": "3",
          "type": "operator",
        },
      ],
      "data": {
        "operator": "block",
        "position": {
          "end": 1,
          "start": 0,
        },
      },
      "id": "4",
      "type": "operator",
    },
  ],
  "data": {},
  "id": "7",
  "type": "script",
}
`;

exports[`finds all errors in example '}' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 1,
        "kind": "primary",
        "message": "unexpected closing token",
        "start": 0,
      },
    ],
    "message": "Unexpected closing token "}"",
    "notes": [],
    "type": "MISSING_TOKEN",
  },
]
`;

exports[`finds all errors in example '}' 2`] = `
{
  "children": [
    {
      "children": [],
      "data": {
        "position": {
          "end": 1,
          "start": 0,
        },
      },
      "id": "3",
      "type": "implicit_placeholder",
    },
  ],
  "data": {},
  "id": "2",
  "type": "script",
}
`;

exports[`finds all errors in example '1 *' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 3,
        "kind": "primary",
        "message": "can't evaluate this expression",
        "start": 0,
      },
    ],
    "message": "Expected right hand side for operator",
    "notes": [
      "Caused by: [END_OF_SOURCE] Unexpected end of source",
    ],
    "type": "EVALUATION_ERROR",
  },
]
`;

exports[`finds all errors in example '1 *' 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {
            "position": {
              "end": 1,
              "start": 0,
            },
            "value": 1,
          },
          "id": "2",
          "type": "number",
        },
        {
          "children": [],
          "data": {
            "position": {
              "end": 2,
              "start": 2,
            },
          },
          "id": "9",
          "type": "implicit_placeholder",
        },
      ],
      "data": {
        "operator": "*",
        "position": {
          "end": 3,
          "start": 0,
        },
      },
      "id": "6",
      "type": "operator",
    },
  ],
  "data": {},
  "id": "8",
  "type": "script",
}
`;

exports[`finds all errors in example '1 +' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 3,
        "kind": "primary",
        "message": "can't evaluate this expression",
        "start": 0,
      },
    ],
    "message": "Expected right hand side for operator",
    "notes": [
      "Caused by: [END_OF_SOURCE] Unexpected end of source",
    ],
    "type": "EVALUATION_ERROR",
  },
]
`;

exports[`finds all errors in example '1 +' 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {
            "position": {
              "end": 1,
              "start": 0,
            },
            "value": 1,
          },
          "id": "2",
          "type": "number",
        },
        {
          "children": [],
          "data": {
            "position": {
              "end": 2,
              "start": 2,
            },
          },
          "id": "9",
          "type": "implicit_placeholder",
        },
      ],
      "data": {
        "operator": "add",
        "position": {
          "end": 3,
          "start": 0,
        },
      },
      "id": "6",
      "type": "operator",
    },
  ],
  "data": {},
  "id": "8",
  "type": "script",
}
`;

exports[`finds all errors in example '1 2' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 1,
        "kind": "primary",
        "message": "can't evaluate this expression",
        "start": 0,
      },
    ],
    "message": "Cannot apply a number as a function",
    "notes": [],
    "type": "EVALUATION_ERROR",
  },
]
`;

exports[`finds all errors in example '1 2' 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {
            "position": {
              "end": 1,
              "start": 0,
            },
          },
          "id": "10",
          "type": "implicit_placeholder",
        },
        {
          "children": [],
          "data": {
            "position": {
              "end": 3,
              "start": 2,
            },
            "value": 2,
          },
          "id": "6",
          "type": "number",
        },
      ],
      "data": {
        "operator": "application",
        "position": {
          "end": 3,
          "start": 0,
        },
      },
      "id": "7",
      "type": "operator",
    },
  ],
  "data": {},
  "id": "9",
  "type": "script",
}
`;

exports[`finds all errors in example 'x[(1]' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 4,
        "kind": "primary",
        "message": "somewhere here",
        "start": 2,
      },
    ],
    "message": "Missing token, expected one of: ")"",
    "notes": [],
    "type": "MISSING_TOKEN",
  },
]
`;

exports[`finds all errors in example 'x[(1]' 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {
            "position": {
              "end": 1,
              "start": 0,
            },
            "value": "x",
          },
          "id": "14",
          "type": "name",
        },
        {
          "children": [
            {
              "children": [],
              "data": {
                "position": {
                  "end": 4,
                  "start": 3,
                },
                "value": 1,
              },
              "id": "27",
              "type": "number",
            },
          ],
          "data": {
            "operator": "parens",
            "position": {
              "end": 4,
              "start": 2,
            },
          },
          "id": "29",
          "type": "operator",
        },
      ],
      "data": {
        "operator": "index",
        "position": {
          "end": 5,
          "start": 0,
        },
      },
      "id": "32",
      "type": "operator",
    },
  ],
  "data": {},
  "id": "34",
  "type": "script",
}
`;

exports[`finds all errors in example 'x[{ 1 ]' 1`] = `
[
  {
    "data": {},
    "fileId": 0,
    "labels": [
      {
        "end": 5,
        "kind": "primary",
        "message": "somewhere here",
        "start": 2,
      },
    ],
    "message": "Missing token, expected one of: "}"",
    "notes": [],
    "type": "MISSING_TOKEN",
  },
]
`;

exports[`finds all errors in example 'x[{ 1 ]' 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {
            "position": {
              "end": 1,
              "start": 0,
            },
            "value": "x",
          },
          "id": "15",
          "type": "name",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "data": {
                    "position": {
                      "end": 5,
                      "start": 4,
                    },
                    "value": 1,
                  },
                  "id": "28",
                  "type": "number",
                },
              ],
              "data": {
                "operator": "sequence",
                "position": {
                  "end": 5,
                  "start": 4,
                },
              },
              "id": "30",
              "type": "operator",
            },
          ],
          "data": {
            "operator": "block",
            "position": {
              "end": 5,
              "start": 2,
            },
          },
          "id": "31",
          "type": "operator",
        },
      ],
      "data": {
        "operator": "index",
        "position": {
          "end": 7,
          "start": 0,
        },
      },
      "id": "34",
      "type": "operator",
    },
  ],
  "data": {},
  "id": "36",
  "type": "script",
}
`;
